test/spec_vectors/try_table/fail/module_15.wat
(module (type $t (func)) (tag $e (param (ref null $t))) (func (export "catch_ref") (result (ref $t)) (block $l (result (ref $t) (ref exn)) (try_table (catch_ref $e $l)) (unreachable))))